traning/force-app/main/default/objects/Student__c/fields/Salesforce_Skill_Set__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Skill_Set__c</fullName>
    <label>Salesforce Skill Set</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Salesforce_Role__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Admin Concepts</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Async Apex Integration</fullName>
            </value>
            <value>
                <fullName>Aura</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>Data Security</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>G Suite</fullName>
            </value>
            <value>
                <fullName>JIRA</fullName>
            </value>
            <value>
                <fullName>Lucid Chart</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>Smartsheets</fullName>
            </value>
            <value>
                <fullName>Test Class</fullName>
            </value>
            <value>
                <fullName>Trigger</fullName>
            </value>
            <value>
                <fullName>Visualforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>