traning/force-app/main/default/objects/Student__c/fields/Weekdays__c.field-meta.xml
<CustomField>
    <fullName>Weekdays__c</fullName>
    <label>Weekdays</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Enrolled_Full_Time__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Weekdays</valueSetName>
    </valueSet>
</CustomField>